--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
             <p>
                 ShuTing <span class="faded">(she/her)</span> here!
                 Thank you for visiting my little internet nook.
-                I'm an island born, city raised Chinese-Canadian currently based in Vancouver, BC.
                 I'm pursuing my <b>Computer Science</b> degree at the
                 <b><a href="https://www.ubc.ca/" target="_blank">University of British Columbia</a></b>,
                 progressing through my career journey as a <b>software engineer</b>
@@ -309,7 +308,7 @@
                         </li>
                         <li class="carousel-slide">
                             <div class="video-responsive">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/WOHYUyyCAdY"
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/XVHKH3xJb30"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen>
@@ -318,7 +317,7 @@
                         </li>
                         <li class="carousel-slide">
                             <div class="video-responsive">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/14WUuya94QE"
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/WOHYUyyCAdY"
                                     title="YouTube video player" frameborder="0"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen>
