--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="https://github.com/shuting-hu" target="_blank">
                     <img src="assets/icons/github.svg" alt="github" />
                 </a>
-                <a href="https://www.linkedin.com/in/shu-ting-hu/" target="_blank">
+                <a href="https://www.linkedin.com/in/shutingh/" target="_blank">
                     <img src="assets/icons/linkedin.svg" alt="linkedin" />
                 </a>
                 <a href="mailto:shutinghu2000@gmail.com">
@@ -367,7 +367,7 @@
             <a href="https://github.com/shuting-hu" target="_blank">
                 <img src="assets/icons/github.svg" alt="github" />
             </a>
-            <a href="https://www.linkedin.com/in/shu-ting-hu/" target="_blank">
+            <a href="https://www.linkedin.com/in/shutingh/" target="_blank">
                 <img src="assets/icons/linkedin.svg" alt="linkedin" />
             </a>
             <a href="https://www.youtube.com/channel/UC-pdQ79A-Vnd0fwWuJnR76g" target="_blank">
